[package]
name = "osint-recon-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = "4.0"
openai-rs = "0.1"  # Assuming there's a crate for interacting with OpenAI
dotenv = "0.15"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
